# hybrid-recsys

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
data/: catalog.json
docs/: DESIGN.md  PROVIDERS.md
docs/superpowers/specs/: 2026-04-02-hybrid-recsys-design.md
scripts/: benchmark_latency.py  evaluate.py  generate_catalog.py
src/hybrid_recsys/: api.py  cli.py  config.py  factory.py  metrics.py  models.py
src/hybrid_recsys/indexing/: store.py  tfidf.py  vectorizer.py
src/hybrid_recsys/providers/embeddings/: base.py  openai.py  sentence_tf.py
src/hybrid_recsys/providers/llm/: base.py  mock.py  openai.py
src/hybrid_recsys/providers/nlp/: spacy.py
src/hybrid_recsys/retrieval/: ann_search.py  fusion.py  pipeline.py  reranker.py  scorer.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_cli.py  test_config.py  test_evaluate.py  test_fusion.py  test_openai_embedding.py  test_openai_llm.py  test_pipeline.py  test_reranker.py  test_scorer.py  test_spacy_nlp.py  test_store.py  test_tfidf.py  test_vectorizer.py
